--- a/public/css/conductor.css
+++ b/public/css/conductor.css
@@ -1,4 +1,67 @@
+@import url(http://fonts.googleapis.com/css?family=IM+Fell+English+SC);
+
+html, body {
+    height: 100%;
+    min-height: 100%;
+}
+
 body {
 	font-size: 12px;
 	padding: 2rem;
+}
+
+h1 {
+	font-family: 'IM Fell English SC', serif !important;
+	text-align: center;
+	height: 6rem
+	margin-bottom: 0;
+}
+
+.container {
+	display: table;
+	height: 100%;
+	width: 100% !important;
+}
+
+#header {
+	display: table-row;
+	height: 9rem;
+}
+
+#content {
+	display: table-row;
+}
+
+.message {
+	border-top: 1px solid black;
+	vertical-align: middle;
+	display: table-cell;
+}
+
+.message > div {
+    margin: 2rem;
+	font-size: 1.4em;
+}
+
+#progress.hidden {
+	display: none;
+}
+
+#progress {
+	display: block;
+}
+
+h1 > span {
+    display: inline-block;
+	background-image: url('../images/gclef.png');
+	background-repeat: no-repeat;
+	background-size: 60%;
+	background-position:0 1rem;
+	width:2.5rem;
+	height: 5rem;
+	margin-bottom: -0.5rem;
+}
+
+.center {
+	text-align: center;
 }
