--- a/public/css/mozart-player.css
+++ b/public/css/mozart-player.css
@@ -6,3 +6,49 @@
   display: inline-block;
   display: none;
 }
+
+/* Page headers , copied from bootstrap homepage */
+.mozart-header {
+  padding: 25px 15px 40px; /* side padding builds on .container 15px, so 30px */
+  font-size: 16px;
+  text-align: center;
+  text-shadow: 0 1px 0 rgba(0,0,0,.15);
+  color: #AD926D;
+  margin-bottom: 15px;
+  background-image: -ms-linear-gradient(top left, #6E3300 0%, #000000 100%);
+  background-image: -moz-linear-gradient(top left, #6E3300 0%, #000000 100%);
+  background-image: -webkit-linear-gradient(top left, #6E3300 0%, #000000 100%);
+  background-image: linear-gradient(to bottom right, #6E3300 0%, #000000 100%);;
+}
+
+.mozart-header h1 {
+  color: #fff;
+}
+.mozart-header p {
+  font-weight: 300;
+  line-height: 1.5;
+}
+.mozart-header .container {
+  position: relative;
+}
+
+.placeholder {
+  height: 50px;
+}
+@media (min-width: 768px) {
+  .mozart-header {
+    font-size: 21px;
+    text-align: left;
+  }
+  .mozart-header h1 {
+    font-size: 60px;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 992px) {
+  .mozart-header h1,
+  .mozart-header p {
+    margin-right: 380px;
+  }
+}
