--- a/public/css/mozart-player.css
+++ b/public/css/mozart-player.css
@@ -79,6 +79,30 @@
   color: white;
 }
 
+#dashboard {
+  display: table;
+}
+
+.left-block, .right-block {
+  display: table-cell;
+}
+
+.score {
+  vertical-align: middle;
+}
+
+.score > span {
+  font-size: 2em;
+}
+
+.score > div {
+  font-size: 5em;
+  color: white;
+  background-color: #204a87;
+  border-radius: 2rem;
+  padding: 2rem;
+}
+
 #speed-dashboard {
   background-color: #888a85;
   background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgba(255,255,255,.7) 10px, rgba(255,255,255,.7) 20px);
